<resources>
    <string name="app_name">MyApplication</string>

    <string name="Tip_Calculator">Tip Calculator</string>
    <string name="label_bill">Bill</string>
    <string name="label_tip_percent">Tip (%)</string>
    <string name="label_amt_tip">Tip ($)</string>
    <string name="label_total">Total</string>
    <string name="people_total">Total people</string>
    <string name="individual_bill">Separate bill</string>


    <string name="amount_bill_hint">Enter bill</string>
    <string name="amount_tip_percent_hint">Enter tip %</string>
    <string name="number_of_people_hint">Number of people</string>

    <string name="calculate_Button">Calculate</string>
    <string name="split_Button">Split</string>
    <string name="next_Button">Click here to split</string>



</resources>